- Total rework of MedControl notification portlet. - Reclassification of "my cases" to include those I reported. - Query for and display "other cases" - Portlet GUI aligned to display as USD-Issues
WebService interaction result:
Exception -> Fail to reach WS
null -> user cannot interact with WS
size 0 -> Do not show portlet
size > 0 -> Show both my and other issues

--- a/trunk/core-bc/modules/portlet/src/main/webapp/style/style.css
+++ b/trunk/core-bc/modules/portlet/src/main/webapp/style/style.css
@@ -1,22 +1,80 @@
-/**
- * Copyright 2010 Västra Götalandsregionen
- *
- *   This library is free software; you can redistribute it and/or modify
- *   it under the terms of version 2.1 of the GNU Lesser General Public
- *   License as published by the Free Software Foundation.
- *
- *   This library is distributed in the hope that it will be useful,
- *   but WITHOUT ANY WARRANTY; without even the implied warranty of
- *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *   GNU Lesser General Public License for more details.
- *
- *   You should have received a copy of the GNU Lesser General Public
- *   License along with this library; if not, write to the
- *   Free Software Foundation, Inc., 59 Temple Place, Suite 330,
- *   Boston, MA 02111-1307  USA
- *
- */
-
-td.caseList {
-  vertical-align: top;
+.notify-issues ul {
+    list-style-image: url("/regionportalen-theme/images/arrows/04_right.png");
+    padding: 0px 0px 0px 10px;
+    margin: 0;
+    margin-bottom: 10px;
+    margin-left: 8px;
 }
+
+.notify-issues li span img {
+    margin-top: 2px;
+}
+
+.notify-head {
+    background-image: url("/regionportalen-theme/images/application/panel_header_toggler_close.png");
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+    font-size: 14px;
+    height: 22px;
+    padding-top: 2px;
+    padding-left: 24px;
+    margin: 0px;
+    margin-bottom: 3px;
+}
+
+.notify-issues h2:hover {
+    background-position: 0px -22px;
+}
+
+.notify-issues form input {
+    background-image: url("/regionportalen-theme/images/portlet/refresh.png");
+    background-repeat: no-repeat;
+    background-position: 3px 50%;
+    padding-left: 22px;
+}
+
+.notify-issues form input:hover {
+    background-image: url("/regionportalen-theme/images/portlet/refresh.png");
+    background-repeat: no-repeat;
+    background-position: 3px 50%;
+    padding-left: 22px;
+}
+
+.notify-issues .notify-folded {
+    background-image: url("/regionportalen-theme/images/application/panel_header_toggler_open.png");
+}
+
+.notify-cache {
+    margin: 0 20px;
+    text-align: right;
+}
+
+
+#notify-open-longlist {
+    margin: 0 20px;
+    text-align: right;
+    cursor: pointer;
+    font-size: 14px;
+    height: 22px;
+}
+
+a.notify-link, a.notify-link:link, a.notify-link:visited {
+    text-decoration: none;
+    color: #555;
+}
+
+.notify-A {
+    background-color: #f08080;
+    border-style: solid;
+    border-color: red;
+    border-width: 1px;
+}
+
+.notify-phase {
+    background-color: #d3d3d3;
+    border-style: solid;
+    border-color: gray;
+    border-width: 1px;
+    padding: 0 2px 0 3px;
+}
+
